<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/saveNow"
        android:title="@string/saveNow"/>

    <item
        android:id="@+id/smallerSize"
        android:title="@string/smaller"/>
    <item
        android:id="@+id/biggerSize"
        android:title="@string/bigger"/>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/monoStyle"
            android:title="@string/monospace" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/autoSave"
            android:title="@string/autoSave" />
    </group>

    <item
        android:id="@+id/Themes"
        android:title="@string/themes">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/theme_retro"
                    android:title="@string/retro" />
                <item
                    android:id="@+id/theme_day"
                    android:title="@string/Day" />
                <item
                    android:id="@+id/theme_night"
                    android:title="@string/Night" />
                <item
                    android:id="@+id/theme_c64"
                    android:title="c64 native" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/Info"
        android:title="@string/info">
        <menu>
            <item
                android:id="@+id/action_flattr"
                android:title="@string/flattr_this" />
            <item
                android:id="@+id/action_project"
                android:title="@string/projPage" />
            <item android:id="@+id/action_project2"
                android:title="c64 ttfonts" />
        </menu>
    </item>

</menu>